justitia-demo/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
   name: justice-demo
   labels:
      app: justice-demo
spec:
  replicas: 1
  selector:
   matchLabels:
      app: justice-demo
  template:
    metadata:
      labels:
         app: justice-demo
    spec:
      containers:
      - name: justice-demo
        image: ghcr.io/gaip/justitia-dashboard:latest # UNSERE NEUE TORTE! 🎂
        ports:
        - containerPort: 8080 # WICHTIG: > 1024 (Kein Root)
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 5
        securityContext:
          runAsNonRoot: true         # WICHTIG: Wir akzeptieren jede Non-Root UID von OpenShift
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
