justitia-demo/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: justice-demo
  labels:
    app: justice-demo
spec:
  to:
    kind: Service
    name: justice-demo
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
